; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_kobj.c_kobj_init1.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_kobj.c_kobj_init1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_5__*, i32)* @kobj_init1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kobj_init1(i32 %0, %struct.TYPE_5__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = call i32 (...) @KOBJ_LOCK()
  br label %10

10:                                               ; preds = %24, %3
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %26

15:                                               ; preds = %10
  %16 = call i32 (...) @KOBJ_UNLOCK()
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @kobj_class_compile1(%struct.TYPE_5__* %17, i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %15
  %23 = load i32, i32* %8, align 4
  store i32 %23, i32* %4, align 4
  br label %31

24:                                               ; preds = %15
  %25 = call i32 (...) @KOBJ_LOCK()
  br label %10

26:                                               ; preds = %10
  %27 = load i32, i32* %5, align 4
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %29 = call i32 @kobj_init_common(i32 %27, %struct.TYPE_5__* %28)
  %30 = call i32 (...) @KOBJ_UNLOCK()
  store i32 0, i32* %4, align 4
  br label %31

31:                                               ; preds = %26, %22
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @KOBJ_LOCK(...) #1

declare dso_local i32 @KOBJ_UNLOCK(...) #1

declare dso_local i32 @kobj_class_compile1(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @kobj_init_common(i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
